# microshop_api

./: .gitignore  crud.py  database.py  main.py  microshop.db  pyproject.toml
models/: __init__.py  associations.py  customer.py  models_customer.py  models_order.py  models_product.py  order.py  product.py
routers/: __init__.py  customer.py  order.py  product.py  views_customer.py  views_order.py  views_product.py
schemas/: __init__.py  customer.py  product.py  schemas_customer.py  schemas_order.py  schemas_product.py
tests/: conftest.py  test_crud.py
