[project]
name = "microshop-api"
version = "0.1.0"
description = "practice!"
authors = [
    {name = "Igor Bondarenko",email = "bondarenko200021@mail.ru"}
]
license = {text = "MIT"}

requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
